--- a/.github/workflows/weekly-retrain.yml
+++ b/.github/workflows/weekly-retrain.yml
@@ -27,6 +27,10 @@ jobs:
       run: |
         python scripts/scraper.py
 
+    - name: Run Data Preparation (Update Pickles)
+      run: |
+        cd api && python data_preparation.py
+
     - name: Run Training Script
       run: |
         python scripts/train.py
@@ -35,6 +39,6 @@ jobs:
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
-        git add data/raw/"DATA RUMAH.xlsx" api/models/production_model.pkl api/models/metrics.json
+        git add data/raw/"DATA RUMAH.xlsx" data/processed/*.pkl api/models/production_model.pkl api/models/metrics.json
         git commit -m "Auto-update model and metrics [skip ci]" || echo "No changes to commit"
         git push
